adicionando o projeto corrigido

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -178,7 +178,7 @@ Built with <a href="https://gohugo.io">Hugo</a> ❤️ <a href="https://github.c
                 <div class="portfolio_content">
                     <div class="item featured text-center">
                         <span class="project__title">
-                            <a href="https://github.com/taryll" target="_blank" rel="noopener noreferrer">Analisando dados do mercado imobiliário de Melbourne</a>
+                            <a href="https://medium.com/@tarylljun/analisando-o-mercado-imobili%C3%A1rio-de-melbourne-4949cd2c404a" target="_blank" rel="noopener noreferrer">Analisando dados do mercado imobiliário de Melbourne</a>
                         </span>
                         <p class="project__subtitle-big">
                             <sup><i class="fa fa-quote-left" aria-hidden="true"></i></sup>
