--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -192,6 +192,7 @@ Built with <a href="https://gohugo.io">Hugo</a> ❤️ <a href="https://github.c
                         </div>
                         <div class="project__summary">
                                 <p>Primeiro projeto de insights, analisando dados do setor imobiliário que parecia estar sofrendo uma bolha. São análises simples que podem gerar grandes valores se utilizadas de forma inteligente.</p>
+<p><a href="https://medium.com/@tarylljun/analisando-o-mercado-imobili%C3%A1rio-de-melbourne-4949cd2c404a">Link do medium</a>.</p>
 
                         </div>
                     </div>
